K8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
  labels:
    app: auth
spec:
  ports:
   - port: 8080
  selector:
    app: auth
